<resources>
    <string name="app_name">MobileReport</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="txt_btn_add">Add</string>
    <string name="txt_btn_edit">Edit</string>
    <string name="txt_btn_del">Del</string>
    <string name="title_activity_admin_dialog_fragment">AdminDialogFragment</string>
    <string name="action_settings">Settings</string>

    <string name="user_toast"></string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
