<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.AdminActivity">
    >

    <Button
        android:id="@+id/btnAdd"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:text="@string/txt_btn_add"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnEdit"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/txt_btn_edit"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnDel"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/txt_btn_del"
        android:textSize="20dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="46dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:textSize="20sp">

        <ListView
            android:id="@+id/usersList"
            style="@style/Widget.Design.Snackbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/btnAdd"
            android:layout_centerHorizontal="true"
            android:dividerHeight="1dp"

            />
    </LinearLayout>

</RelativeLayout>
